CHANGES IN VERSION 2.9.6
------------------------
 o fixed R check <2016-03-05, Sat>
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 2.9.5
------------------------
 o upset plot for enrichResult object <2016-01-22, Fri>
 
CHANGES IN VERSION 2.9.4
------------------------
 o bug fixed in scaling category sizes in enrichMap <2016-01-10, Sun>
   + use setSize in gseResult

CHANGES IN VERSION 2.9.3
------------------------
 o update enrichMap to scale category sizes <2016-01-04, Mon>
 o update 'show' methods of enrichResult and gseaResult <2015-12-29, Tue>
 
CHANGES IN VERSION 2.9.2
------------------------
 o re-design internal function <2015-12-20, Sun>
 
CHANGES IN VERSION 2.9.1
------------------------
 o GSEA: test bimodal separately <2015-10-28, Wed>
 o add NES column in GSEA result <2015-10-28, Wed>
 o use NES instead of ES in calculating p-values. <2015-10-28, Wed>
 o duplicated gene IDs in enrich.internal is not allow. add `unique` to remove duplicated ID. <2015-10-20, Tue>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/27
   
CHANGES IN VERSION 2.9.0
------------------------
 o BioC 3.3 branch
 
CHANGES IN VERSION 2.7.12
------------------------
 o output a list of data frames by enrichMap via invisible, so that the graph info can be viewed by other tools, eg. Cytoscape. <2015-09-30, Wed>
 
CHANGES IN VERSION 2.7.11
------------------------
 o check whether input geneList is sorted <2015-09-22, Tue>
 o order first followed by showCategory subsetting in barplot <2015-09-08, Tue> 
   + https://support.bioconductor.org/p/71917/#71939
 o bug fixed in EXTID2NAME, keytype is TAIR for arabidopsis and ORF for malaria <2015-08-26, Wed>
 
CHANGES IN VERSION 2.7.10
------------------------
 o add Giovanni Dall'Olio as contributor in author list. <2015-07-21, Tue>
 o update NCG data to version cancergenes_4.9.0_20150720 contributed by Giovanni Dall'Olio.
   https://github.com/GuangchuangYu/DOSE/pull/8 <2015-07-21, Tue>